--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Large Lobster Model | $LLM</title>
+    <title>Large Lobstar Model | $LLM</title>
     <link rel="icon" type="image/png" href="https://qqdcuegjodukfawbobro.supabase.co/storage/v1/object/public/Hh/file_00000000980c7246b10a4e26658e15f0%20(1).png" />
   </head>
   <body>
