fix: Update logo asset URL
Replaces the old logo asset URL with a new one across the application. This ensures that the correct branding is displayed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Large Lobstar Model | $LLM</title>
-    <link rel="icon" type="image/png" href="https://qqdcuegjodukfawbobro.supabase.co/storage/v1/object/public/Hh/file_00000000980c7246b10a4e26658e15f0%20(1).png" />
+    <link rel="icon" type="image/png" href="https://qqdcuegjodukfawbobro.supabase.co/storage/v1/object/public/Hh/IMG_20260223_120222_727.jpg" />
   </head>
   <body>
     <div id="root"></div>
